small fix: horizontal scrolling disabled on this website

--- a/website/public/src/css/main.css
+++ b/website/public/src/css/main.css
@@ -13,6 +13,7 @@ body,
 html {
   max-width: 100%;
   min-height: 100vh;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 /* 
